--- a/index.html
+++ b/index.html
@@ -119,4 +119,47 @@ d3.json("FINAL_HW2_EXTRACT_DATASET_subset.json").then(data => {
 </script>
 
 </body>
+
+<meta charset="utf-8">
+<title>MAP VISUAL</title>
+<link rel="stylesheet" type="text/css" href="./inspector.css">
+<body>
+<script type="module">
+
+import define from "./MAPindex.js";
+import {Runtime, Library, Inspector} from "./runtime.js";
+
+const runtime = new Runtime();
+const main = runtime.module(define, Inspector.into(document.body));
+
+</script>
+
+
+<meta charset="utf-8">
+<title>MOON VISUAL</title>
+<link rel="stylesheet" type="text/css" href="./inspector.css">
+<body>
+<script type="module">
+
+import define from "./MOONindex.js";
+import {Runtime, Library, Inspector} from "./runtime.js";
+
+const runtime = new Runtime();
+const main = runtime.module(define, Inspector.into(document.body));
+
+</script>
+
+<meta charset="utf-8">
+<title>Scatterplots Of Witness Count, Binge Drinking, Semantic Similarity, and Fuzzy Similarity</title>
+<link rel="stylesheet" type="text/css" href="./inspector.css">
+<body>
+<script type="module">
+
+import define from "./MOONindex.js";
+import {Runtime, Library, Inspector} from "./runtime.js";
+
+const runtime = new Runtime();
+const main = runtime.module(define, Inspector.into(document.body));
+
+</script>
 </html>
