--- a/index.html
+++ b/index.html
@@ -1,3 +1,57 @@
+<head>
+  <meta charset="utf-8" />
+  <title>Combined Visualizations</title>
+  <script src="d3.js"></script>
+  <link rel="stylesheet" type="text/css" href="./inspector.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      line-height: 1.6;
+      background-color: #e6f2ff; /* light blue */
+      color: #222;
+    }
+
+    h1, h2 {
+      color: #003366;
+    }
+
+    section {
+      margin-bottom: 80px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.8s ease;
+    }
+
+    section.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .description {
+      margin-bottom: 20px;
+      font-size: 16px;
+      color: #333;
+    }
+
+    .legend rect:hover {
+      stroke: black;
+      stroke-width: 1px;
+      transform: scale(1.1);
+      transition: 0.3s ease;
+    }
+
+    .arc path:hover {
+      opacity: 0.8;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+  </style>
+</head>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +63,15 @@
     body {
       font-family: Arial, sans-serif;
       margin: 40px;
+      line-height: 1.6;
     }
     section {
       margin-bottom: 80px;
+    }
+    .description {
+      margin-bottom: 20px;
+      font-size: 16px;
+      color: #333;
     }
   </style>
 </head>
@@ -19,32 +79,56 @@
 
   <h1>All Visualizations</h1>
 
+  <div class="description">
+    <!-- Site-wide intro -->
+    <p><strong>Overview:</strong> INSERT TEXT HERE — Describe the purpose of this dashboard or your project goals.</p>
+    <p><strong>Data Sources:</strong> INSERT TEXT HERE — Explain where the data comes from and any preprocessing steps.</p>
+  </div>
+
   <!-- Pie Chart Section -->
   <section>
     <h2>Distribution of Topic Locations for All 50 States + D.C.</h2>
+    <div class="description">
+      <p>INSERT TEXT HERE — Explain what the pie chart represents, how the data was grouped, and any patterns or surprises.</p>
+    </div>
     <div id="chart"></div>
   </section>
 
   <!-- Map Visualization -->
   <section>
     <h2>Map Visualization</h2>
+    <div class="description">
+      <p>INSERT TEXT HERE — Describe what the map shows, what each hexagon represents, and how distance or color is encoded.</p>
+    </div>
     <div id="map-viz"></div>
   </section>
 
   <!-- Moon Visualization -->
   <section>
     <h2>Moon Visualization</h2>
+    <div class="description">
+      <p>INSERT TEXT HERE — Explain what the moon visualization communicates and why it's relevant to your data or narrative.</p>
+    </div>
     <div id="moon-viz"></div>
   </section>
 
   <!-- Scatterplot Visualization -->
   <section>
     <h2>Scatterplots of Witness Count, Binge Drinking, Semantic Similarity, and Fuzzy Similarity</h2>
+    <div class="description">
+      <p>INSERT TEXT HERE — Summarize what each axis represents in the scatterplot(s), and what insight you hope viewers gain.</p>
+    </div>
     <div id="scatterplot-viz"></div>
   </section>
 
+  <div class="description">
+    <!-- Optional closing summary or reflection -->
+    <p><strong>Conclusion:</strong> INSERT TEXT HERE — Wrap up with any final insights, takeaways, or next steps for this research.</p>
+  </div>
+
   <!-- PIE CHART SCRIPT -->
   <script type="text/javascript">
+    // (Pie chart script remains unchanged)
     const w = 1000;
     const h = 900;
     const padding = 20;
@@ -156,4 +240,20 @@
 
 </body>
 </html>
+<script>
+  // Reveal sections on scroll
+  const sections = document.querySelectorAll("section");
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add("visible");
+      }
+    });
+  }, {
+    threshold: 0.1
+  });
 
+  sections.forEach(section => {
+    observer.observe(section);
+  });
+</script>
