--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!-- Pie Chart Section -->
   <section>
     <h2>Distribution of Topic Locations for All 50 States + D.C.</h2>
-    <p class="description">INSERT TEXT HERE: Describe what this pie chart shows, how to read it, and what insights can be gained.</p>
+    <p class="description">This is a test and it's not working.</p>
     <div id="chart"></div>
   </section>
 
