--- a/index.html
+++ b/index.html
@@ -9,47 +9,15 @@
     body {
       font-family: Arial, sans-serif;
       margin: 40px;
-      background-color: #e6f2ff; /* Light blue background */
-      color: #222;
+      line-height: 1.6;
     }
-
-    h1, h2 {
-      color: #003366;
-    }
-
     section {
       margin-bottom: 80px;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      padding: 30px;
-      opacity: 0;
-      transform: translateY(30px);
-      transition: all 0.8s ease;
     }
-
-    section.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
     .description {
       margin-bottom: 20px;
       font-size: 16px;
       color: #333;
-    }
-
-    .legend rect:hover {
-      stroke: black;
-      stroke-width: 1px;
-      transform: scale(1.1);
-      transition: 0.3s ease;
-    }
-
-    .arc path:hover {
-      opacity: 0.8;
-      cursor: pointer;
-      transition: 0.3s ease;
     }
   </style>
 </head>
@@ -57,36 +25,56 @@
 
   <h1>All Visualizations</h1>
 
+  <div class="description">
+    <!-- Site-wide intro -->
+    <p><strong>Overview:</strong> INSERT TEXT HERE — Describe the purpose of this dashboard or your project goals.</p>
+    <p><strong>Data Sources:</strong> INSERT TEXT HERE — Explain where the data comes from and any preprocessing steps.</p>
+  </div>
+
   <!-- Pie Chart Section -->
   <section>
     <h2>Distribution of Topic Locations for All 50 States + D.C.</h2>
-    <p class="description">This is a test and it's not working.</p>
+    <div class="description">
+      <p>INSERT TEXT HERE — Explain what the pie chart represents, how the data was grouped, and any patterns or surprises.</p>
+    </div>
     <div id="chart"></div>
   </section>
 
   <!-- Map Visualization -->
   <section>
     <h2>Map Visualization</h2>
-    <p class="description">INSERT TEXT HERE: Explain the purpose of the map, any patterns viewers should notice, and what it represents.</p>
+    <div class="description">
+      <p>INSERT TEXT HERE — Describe what the map shows, what each hexagon represents, and how distance or color is encoded.</p>
+    </div>
     <div id="map-viz"></div>
   </section>
 
   <!-- Moon Visualization -->
   <section>
     <h2>Moon Visualization</h2>
-    <p class="description">INSERT TEXT HERE: Explain what the moon symbols represent, how the visualization works, and why it's interesting.</p>
+    <div class="description">
+      <p>INSERT TEXT HERE — Explain what the moon visualization communicates and why it's relevant to your data or narrative.</p>
+    </div>
     <div id="moon-viz"></div>
   </section>
 
   <!-- Scatterplot Visualization -->
   <section>
     <h2>Scatterplots of Witness Count, Binge Drinking, Semantic Similarity, and Fuzzy Similarity</h2>
-    <p class="description">INSERT TEXT HERE: Describe the scatterplots, what the axes show, and how to interpret the trends or clusters.</p>
+    <div class="description">
+      <p>INSERT TEXT HERE — Summarize what each axis represents in the scatterplot(s), and what insight you hope viewers gain.</p>
+    </div>
     <div id="scatterplot-viz"></div>
   </section>
 
+  <div class="description">
+    <!-- Optional closing summary or reflection -->
+    <p><strong>Conclusion:</strong> INSERT TEXT HERE — Wrap up with any final insights, takeaways, or next steps for this research.</p>
+  </div>
+
   <!-- PIE CHART SCRIPT -->
   <script type="text/javascript">
+    // (Pie chart script remains unchanged)
     const w = 1000;
     const h = 900;
     const padding = 20;
@@ -196,23 +184,6 @@
     runtimeScatter.module(define, Inspector.into(document.querySelector("#scatterplot-viz")));
   </script>
 
-  <!-- Scroll Animation Script -->
-  <script>
-    const sections = document.querySelectorAll("section");
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add("visible");
-        }
-      });
-    }, {
-      threshold: 0.1
-    });
-
-    sections.forEach(section => {
-      observer.observe(section);
-    });
-  </script>
-
 </body>
 </html>
+
