--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 </head>
 <body>
 
-  <h1>All Visualizations</h1>
+  <h1>Team 14: Visualzing the Haunted Places Dataset</h1>
 
   <div class="description">
     <!-- Site-wide intro -->
-    <p><strong>Overview:</strong> INSERT TEXT HERE — Describe the purpose of this dashboard or your project goals.</p>
+    <p><strong>Overview:</strong> In this site, we want show some of the visuals one can make with d3 and out haunted places dataset. As outlined in our project report, we've taken many steps to enchance, featurize, and build upon locations of haunted sightings.</p>
     <p><strong>Data Sources:</strong> INSERT TEXT HERE — Explain where the data comes from and any preprocessing steps.</p>
   </div>
 
   <!-- Pie Chart Section -->
   <section>
-    <h2>Distribution of Topic Locations for All 50 States + D.C.</h2>
+    <h2>Distribution of Sightings across the 50 States + D.C.</h2>
     <div class="description">
       <p>INSERT TEXT HERE — Explain what the pie chart represents, how the data was grouped, and any patterns or surprises.</p>
     </div>
