--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     import define from "./WORDindex.js";
     import {Runtime, Inspector} from "./runtime.js";
     const runtimeMap = new Runtime();
-    runtimeMap.module(define, Inspector.into(document.querySelector("#word-viz")));
+    runtimeWird.module(define, Inspector.into(document.querySelector("#word-viz")));
   </script>
 
   <!-- MOON MODULE -->
