--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   
   <!-- MAP MODULE -->
   <script type="module">
-    import define from "./MAPindex.js";
+    import define from "./Map2index.js";
     import {Runtime, Inspector} from "./runtime.js";
     const runtimeMap = new Runtime();
     runtimeMap.module(define, Inspector.into(document.querySelector("#map-viz")));
