--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="description">
     <!-- Site-wide intro -->
     <p><strong>Overview:</strong> In this site, we want show some of the visuals one can make with d3 and out haunted places dataset. As outlined in our project report, we've taken many steps to enchance, featurize, and build upon locations of haunted sightings.</p>
-    <p><strong>Data Sources:</strong> INSERT TEXT HERE — Explain where the data comes from and any preprocessing steps.</p>
+    <p><strong>Data Sources:</strong> Data was collected from OpenStreetMap, the US Government, and other public sources. Contact afratto@usc.edu for more details.</p>
   </div>
 
   <!-- Pie Chart Section -->
@@ -53,7 +53,7 @@
   <section>
     <h2>Word Cloud Visualization</h2>
     <div class="description">
-      <p>INSERT TEXT HERE — Describe what the map shows, what each hexagon represents, and how distance or color is encoded.</p>
+      <p>Using our descriptions of the haunted sightings, we created a word cloud to understand which words pop up the most frequently. Clearly, people, seen, night, and old are reoccuring themes.</p>
     </div>
     <div id="word-viz"></div>
   </section>
@@ -62,7 +62,7 @@
   <section>
     <h2>Moon Visualization</h2>
     <div class="description">
-      <p>INSERT TEXT HERE — Explain what the moon visualization communicates and why it's relevant to your data or narrative.</p>
+      <p>Our team added three new features to the haunted dataset, all pertaining to the moon the night of a haunting. The distance from the moon, the diameter of the moon, and the phase of the moon are all key parts of our story. From the graphs below, we can see there's a strong connection between each variable and the frequency of sightings.</p>
     </div>
     <div id="moon-viz"></div>
   </section>
@@ -71,14 +71,14 @@
   <section>
     <h2>Scatterplots of Witness Count, Binge Drinking, Semantic Similarity, and Fuzzy Similarity</h2>
     <div class="description">
-      <p>INSERT TEXT HERE — Summarize what each axis represents in the scatterplot(s), and what insight you hope viewers gain.</p>
+      <p>Our dataset included a few important numerical values: Binge Drinking Rate, Witness Count, and our Fuzzy and Semantic Similarity scores- numeric indicators derived fromt he descriptions that allowed us to compare the text to other numeric data types. this allows us to see how binge drinking rate and witness count influence the descriptions.</p>
     </div>
     <div id="scatterplot-viz"></div>
   </section>
 
   <div class="description">
     <!-- Optional closing summary or reflection -->
-    <p><strong>Conclusion:</strong> INSERT TEXT HERE — Wrap up with any final insights, takeaways, or next steps for this research.</p>
+    <p><strong>Conclusion:</strong> This of course is just an exploratroy analysis, as the visuals here merely demonstrate a correlation. Furter work will be done to find causal effects.</p>
   </div>
 
   <!-- PIE CHART SCRIPT -->
