--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Combined Visualizations</title>
+  <title>Team 14 Visualizations</title>
   <script src="d3.js"></script>
   <link rel="stylesheet" type="text/css" href="./inspector.css">
   <style>
